@@ -115,14 +115,14 @@ public class Tstamp extends Task {
             }
 
             SimpleDateFormat dstamp = new SimpleDateFormat ("yyyyMMdd");
-            getProject().setNewProperty(prefix + "DSTAMP", dstamp.format(d));
+            setProperty("DSTAMP", dstamp.format(d));
 
             SimpleDateFormat tstamp = new SimpleDateFormat ("HHmm");
-            getProject().setNewProperty(prefix + "TSTAMP", tstamp.format(d));
+            setProperty("TSTAMP", tstamp.format(d));
 
             SimpleDateFormat today
                 = new SimpleDateFormat ("MMMM d yyyy", Locale.US);
-            getProject().setNewProperty(prefix + "TODAY", today.format(d));
+            setProperty("TODAY", today.format(d));
 
         } catch (Exception e) {
             throw new BuildException(e);
@@ -134,9 +134,17 @@ public class Tstamp extends Task {
      * @return a ready to fill-in format
      */
     public CustomFormat createFormat() {
-        CustomFormat cts = new CustomFormat(prefix);
+        CustomFormat cts = new CustomFormat();
         customFormats.addElement(cts);
         return cts;
+    }
+
+    /**
+     * helper that encapsulates prefix logic and property setting
+     * policy (i.e. we use setNewProperty instead of setProperty).
+     */
+    private void setProperty(String name, String value) {
+        getProject().setNewProperty(prefix + name, value);
     }
 
     /**
@@ -157,14 +165,11 @@ public class Tstamp extends Task {
         private String variant;
         private int offset = 0;
         private int field = Calendar.DATE;
-        private String prefix = "";
 
         /**
-         * Create a format with the current prefix
-         * @param prefix
+         * Create a format
          */
-        public CustomFormat(String prefix) {
-            this.prefix = prefix;
+        public CustomFormat() {
         }
 
         /**
@@ -172,7 +177,7 @@ public class Tstamp extends Task {
          * @param propertyName
          */
         public void setProperty(String propertyName) {
-            this.propertyName = prefix + propertyName;
+            this.propertyName = propertyName;
         }
 
         /**
@@ -306,7 +311,7 @@ public class Tstamp extends Task {
             if (timeZone != null){
                 sdf.setTimeZone(timeZone);
             }
-            project.setNewProperty(propertyName, sdf.format(date));
+            Tstamp.this.setProperty(propertyName, sdf.format(date));
         }
     }
 
